[package]
name = "twitchbrite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# terminal ui
tui = "0.17"
crossterm = "0.22"

# used for communicating between the display thread, state thread, and possible worker threads
crossbeam-channel = "0.5.4"

# errors and logging
anyhow = "1.0.56"

# interfacing with twitch and friends
hueclient = "0.4.1"

# serde
serde = { version = "1.0.136", features = ["derive"]}
toml = "0.5.8"

# used to generate a device_type id (and possibly interest light effects in the future)
rand = "0.8.5"
